--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
     </a>
 
     <div class="wrap">
-
-      <h1>Header 1</h1>
+      <h1>
+        Header 1
+      </h1>
       <p>
         Lorem ipsum dolor sit <abbr title="American Medical Evidence Team">amet</abbr>, consectetur adipisicing <acronym title="Explain Like I'm Ten">elit</acronym>. Iure atque, optio fuga voluptates officia alias excepturi vero consectetur numquam sunt, cupiditate ad vitae facilis amet officiis debitis dignissimos! Id, quisquam?
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique sapiente, ipsam tenetur magni dolorum voluptatum suscipit molestiae, quos enim nesciunt, labore consequuntur quae. Inventore praesentium totam, soluta tempora officia nemo!
       </p>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga nihil nostrum maxime facilis magnam, enim ad libero id praesentium doloremque?
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi doloremque nam mollitia delectus blanditiis similique neque voluptatum ratione architecto excepturi, soluta culpa, reprehenderit corporis! Accusantium.
+      </p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus labore fuga ratione inventore reprehenderit, consequuntur veritatis possimus accusamus, provident perspiciatis quidem nostrum odit exercitationem placeat, quos magni. Ratione, velit libero.
       </p>
 
       <h2>Header 2</h2>
@@ -29,7 +34,7 @@
 
       <h3>Header 3</h3>
       <p>
-        Lorem ipsum dolor sit amet, <code>consectetur</code> adipisicing elit. Dicta, cupiditate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolores nobis qui blanditiis distinctio velit saepe laudantium possimus ad nostrum perspiciatis <del>vero</del> <ins>ullam</ins> molestias ducimus, cum commodi totam id quibusdam!
+        Lorem ipsum dolor sit amet, <code>consectetur</code> adipisicing elit. Dicta, cupiditate. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis dolores nobis qui blanditiis distinctio velit saepe laudantium possimus ad nostrum perspiciatis <del>vero</del> <ins>ullam</ins> molestias.
       </p>
 
       <h4>Header 4</h4>
@@ -47,7 +52,12 @@
         Lorem ipsum dolor sit amet, <small>consectetur</small> adipisicing elit. Iure, fugiat.
       </p>
 
-  <pre><code>&lt;h1&gt;Hello&lt;/h1&gt;</code></pre>
+<pre><code>&lt;h1&gt;Hello&lt;/h1&gt;
+&lt;h2&gt;World&lt;/h2&gt;</code></pre>
+
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis praesentium inventore voluptatibus sapiente libero beatae magnam pariatur, sed nobis, soluta maiores sit? Repellat quidem quo, quia, inventore soluta aliquam reprehenderit?
+      </p>
 
       <blockquote>
         <p>
@@ -85,9 +95,14 @@
       <form>
         <fieldset>
           <legend>Person:</legend>
-          <label>Name: <input type="text"></label>
-          <label>Email: <input type="text"></label>
-          <label>Date of birth: <input type="text"></label>
+          <label>Name:</label>
+          <input type="text">
+          <label>Email:</label>
+          <input type="text">
+          <label>Date of birth:</label>
+          <input type="text">
+          <label>Message:</label>
+          <textarea></textarea>
         </fieldset>
       </form>
 
